<resources>
    <string name="app_name">InfoSport</string>
    <string name="pom">YOUR ASSISTANT</string>
    <string name="gender">YOUR GENDER</string>
    <string name="bodyType"><u>Determine the body type</u></string>
    <string name="item1">Application Information</string>
    <string name="description_logo">The information provided in this application is for reference and is provided as recommendations.
The author is not responsible for the consequences of improper exercise performance.</string>
    <string name="version">Version 1.0.0</string>
    <string name="info_raz">Write to the developers</string>
    <string name="string_star">Rate the app</string>
    <string name="infosport">Contact the developer</string>
    <string name="string_ectomorph">Usually wiry and thin. They can eat everything in a row and not get better at the same time. <u>Training program</u></string>
    <string name="text_endemorph">The figure has the shape of a king bell. Metabolism is aimed at storing fat. <u>Training program</u></string>
    <string name="text_mesomorph">Strong build with broad shoulders and chest and strong legs. <u>Training program</u></string>
    <string name="legs">(legs)</string>
    <string name="breast">(chest,triceps)</string>
    <string name="back">(back,biceps,\n press)</string>
    <string name="Day1">Day 1</string>
    <string name="Day2">Day 2</string>
    <string name="Day3">Day 3</string>
    <string name="title1">Is it possible to take expired sports nutrition?</string>
    <string name="desc1">Is it possible to take expired protein? If the protein was stored in a dry, dark, cool place and moisture did not get into the container, then such a protein can be taken for 12–18 months after the expiration date.</string>
    <string name="title2">Carbohydrate window</string>
    <string name="desc2">After physical exercises, the body can absorb nutrients with great speed. He assimilates them 4 times faster than before. The reason for this is the banal consumption of energy resources.</string>
    <string name="title3">The most popular fitness destinations</string>
    <string name="desc3">1. CrossFit\n2. Yoga\n3. Zumba-dance for weight loss\n4. Insanity-high-intensity aerobics\n5. P90x-real strength training program for home</string>
    <string name="title4">Equipment</string>
    <string name="desc4">What should I take for training?\n1. Power belt\n2. Elastic bandage\n3. Gloves</string>
    <string name="title5">What is Cheating?</string>
    <string name="desc5">Cheating – indicates a violation of the technique of performing the exercise.\n
The five best exercises for reading:\n
1. Bending the legs lying down \n
2. Lifting on socks \n
3. Lifting the arms to the sides \n
4. Belt pull while sitting on the block (upper pull)\n
5. Alternate lifting of dumbbells </string>
    <string name="title6">Training in the heat: how to maintain productivity and not harm your health</string>
    <string name="desc6">Alas, not all gyms have climate control systems that
they are able to maintain optimal temperature and humidity indicators for training.
Tips for training in the heat:
1. Drink more fluids. Training in the heat leads to a significant increase in sweating and,
as a result, to the loss of a large amount of fluid.
2. Reduce the intensity of training. The more intense the workout, the more the pulse increases and
the more it affects the cardiovascular system
3. Drink sugary drinks. Since the active operation of thermoregulation mechanisms requires a large amount of energy,
many people feel tired in the heat.

</string>
    <string name="EndomorphDay1">DAY 1 (LEGS)</string>
    <string name="EndomorphDay2">DAY 2 (CHEST,TRICEPS)</string>
    <string name="EndomorphDay3">DAY 3 (BACK,BICEPS,ABS)</string>
    <string name="day1">(chest,triceps,\n abs)</string>
    <string name="ectomorph">Your body type: Ectomorph</string>
    <string name="mezomorph">Your body type: Mesomorph</string>
    <string name="endomorph">Your body type: Endomorph</string>
    <string name="okr">Enter the wrist circumference</string>
    <string name="result">Result</string>
    <string name="gir">The percentage of fat in your body is: </string>
    <string name="close">Close</string>
    <string name="nise">Excellent form</string>
    <string name="vrema">Time to lose weight</string>
    <string name="pola1">All fields must be filled in</string>
    <string name="maxresult">Your maximum heart rate during exercise should not exceed: </string>
    <string name="nice">Great, keep up the good work!</string>
    <string name="age">It is necessary to fill in the field \'Age (years)\'</string>
    <string name="result_kkal">Result of kcal per day:</string>
    <string name="neobhodimo">You need to: </string>
    <string name="kkal"> kcal</string>
    <string name="pola">All fields must be filled in</string>
    <string name="water">Daily water allowance</string>
    <string name="drink">You need to drink: </string>
    <string name="day"> liters of water per day</string>
    <string name="drink1">You need to drink: </string>
    <string name="litr"> liters of water per day</string>
    <string name="neobh">All fields must be filled in</string>
    <string name="weight">The result of the weight assessment:</string>
    <string name="niceweight">Your ideal weight: </string>
    <string name="kg"> kg</string>
    <string name="nugno">It is necessary to fill in the field \'Enter height in centimeters\'</string>
    <string name="plan_treni">This block contains training plans</string>
    <string name="kos_icon">Tap the icon to continue</string>
    <string name="nutri">In this block you will be able to choose different dishes for the meal plan</string>
    <string name="sec">How about without a stopwatch during rest and not only</string>
    <string name="note">There is nowhere to write down information about training, leave notes in the notes!</string>
    <string name="articl">You need information about training, the \'Articles\' section will help you</string>
    <string name="idealweight">In this section you will be able to calculate, starting from the ideal weight and ending with the % body fat content</string>
    <string name="man1">You are given the opportunity to choose a male gender...</string>
    <string name="button1">Tap the button to continue</string>
    <string name="girl">And so the female gender by clicking on the \'SELECT\'</string>
    <string name="close1">Tap again to exit the app</string>
    <string name="vopros">Are you sure you want to delete?</string>
    <string name="yes1">Yes</string>
    <string name="no">No</string>
    <string name="delete">The note was successfully deleted</string>
    <string name="q">Mango lassi</string>
    <string name="w">Banana-nut cocktail</string>
    <string name="e">Thick berry smoothie</string>
    <string name="r">Mushroom omelet</string>
    <string name="t">French toast with strawberries</string>
    <string name="y">Oatmeal</string>
    <string name="u">Egg salad</string>
    <string name="i">Green smoothie with spinach</string>
    <string name="o">Chocolate banana smoothie</string>
    <string name="kal1">193 kcal</string>
    <string name="kal2">434 kcal</string>
    <string name="kal3">352 kcal</string>
    <string name="kal4">389 kcal</string>
    <string name="kal6">271 kcal</string>
    <string name="kal7">260 kcal</string>
    <string name="kal8">217 kcal</string>
    <string name="kal9">326 kcal</string>
    <string name="kal10">273 kcal</string>
    <string name="min1">3 mines</string>
    <string name="min2">5 mines</string>
    <string name="min3">5 mines</string>
    <string name="min4">10 mines</string>
    <string name="min5">6 mines</string>
    <string name="min6">10 mines</string>
    <string name="min7">5 mines</string>
    <string name="min8">15 mines</string>
    <string name="min9">5 mines</string>
    <string name="p">Chocolate muffins</string>
    <string name="a">Mini cheesecakes</string>
    <string name="s">Toast with avocado and salmon</string>
    <string name="d">Caprese salad</string>
    <string name="f">Chocolate banana bread</string>
    <string name="g">Mango smoothie with spinach</string>
    <string name="h">Oatmeal cookies</string>
    <string name="j">Coconut smoothie</string>
    <string name="k">Potato muffins</string>
    <string name="kkal11">152 kcal</string>
    <string name="kkal12">184 kcal</string>
    <string name="kkal13">486 kcal</string>
    <string name="kkal14">321 kcal</string>
    <string name="kkal15">165 kcal</string>
    <string name="kkal16">199 kcal</string>
    <string name="kkal17">87 kcal</string>
    <string name="kkal18">283 kcal</string>
    <string name="kkal19">109 kcal</string>
    <string name="min11">25 mines</string>
    <string name="min12">85 mines</string>
    <string name="min13">10 mines</string>
    <string name="min14">5 mines</string>
    <string name="min15">50 mines</string>
    <string name="min16">5 mines</string>
    <string name="min17">23 mines</string>
    <string name="min18">5 mines</string>
    <string name="min19">50 mines</string>
    <string name="l">Chicken noodle soup</string>
    <string name="z">White chicken soup</string>
    <string name="x">Egg soup</string>
    <string name="c">Basic omelet</string>
    <string name="v">Turkey rolls</string>
    <string name="b">Greek salad with cheese</string>
    <string name="n">Chicken Caprese</string>
    <string name="m">Corn soup</string>
    <string name="qq">Chicken with vegetables</string>
    <string name="kkal111">377 kcal</string>
    <string name="kkal112">226 kcal</string>
    <string name="kkal113">199 kcal</string>
    <string name="kkal114">429 kcal</string>
    <string name="kkal115">335 kcal</string>
    <string name="kkal116">226 kcal</string>
    <string name="kkal117">444 kcal</string>
    <string name="kkal118">312 kcal</string>
    <string name="kkal119">438 kcal</string>
    <string name="min111">15 mines</string>
    <string name="min112">20 mines</string>
    <string name="min113">10 mines</string>
    <string name="min114">10 mines</string>
    <string name="min115">5 mines</string>
    <string name="min116">7 mines</string>
    <string name="min117">40 mines</string>
    <string name="min118">27 mines</string>
    <string name="min119">15 mines</string>
    <string name="ww">Melon salad with strawberries and pears</string>
    <string name="ee">Orange smoothie</string>
    <string name="rr">Kefir smoothie with blueberries and banana</string>
    <string name="tt">Strawberry banana smoothie</string>
    <string name="yy">Chocolate banana smoothie</string>
    <string name="uu">Peanut butter balls</string>
    <string name="ii">Homemade apple sauce</string>
    <string name="oo">Cinnamon cupcake in a cup</string>
    <string name="pp">Tuna mini pizza</string>
    <string name="kkal22">158 kcal</string>
    <string name="kkal23">121 kcal</string>
    <string name="kkal24">189 kcal</string>
    <string name="kkal25">150 kcal</string>
    <string name="kkal26">305 kcal</string>
    <string name="kkal27">57 kcal</string>
    <string name="kkal28">163 kcal</string>
    <string name="kkal29">412 kcal</string>
    <string name="kkal30">357 kcal</string>
    <string name="minq">10 mines</string>
    <string name="weight11">Your \perfect\pves</string>
    <string name="pulse">The maximum value of the pulse at loads</string>
    <string name="gir111">Determining the percentage of\fat in\organism</string>
    <string name="spin">(back,biceps)</string>
    <string name="nogi">(shoulders,legs,abs)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cbr">RESET</string>
    <string name="rost">Height (cm)</string>
    <string name="rac">Calculate</string>
    <string name="weight111">Weight (kg)</string>
    <string name="obx">Belly girth (cm)</string>
    <string name="eg">Age (years)</string>
</resources>