<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="184dp"
        android:layout_marginTop="-5dp"
        android:contentDescription="TODO"
        android:src="@drawable/background_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewDay11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-75dp"
            android:layout_marginTop="-28dp"
            android:fontFamily="@font/ruda"
            android:text="@string/Day1"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginStart="-75dp"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-70dp"
            android:layout_marginLeft="-70dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/ruda"
            android:text="@string/day1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="90dp"
            app:srcCompat="@drawable/icon_day1ectomorph"
            android:contentDescription="TODO"
            android:layout_marginStart="90dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView22"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:id="@+id/textViewDay22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="-75dp"
            android:layout_marginTop="-28dp"
            android:fontFamily="@font/ruda"
            android:onClick="onClick"
            android:text="@string/Day2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ruda"
            android:text="@string/spin"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="80dp" />

        <ImageView
            android:id="@+id/imageView121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-2dp"
            android:layout_marginLeft="90dp"
            app:srcCompat="@drawable/icon_day2ecdomorph" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView24"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView22">

        <TextView
            android:id="@+id/textViewDay33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-75dp"
            android:layout_marginTop="-28dp"
            android:fontFamily="@font/ruda"
            android:text="@string/Day3"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginStart="-75dp" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-70dp"
            android:layout_marginLeft="-70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ruda"
            android:text="@string/nogi"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="90dp"
            app:srcCompat="@drawable/day3ectomorph"
            android:layout_marginStart="90dp"
            android:contentDescription="TODO" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>